<resources>
    <string name="app_name">Islamy</string>
    <string name="start">Start</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="nextPrayerTV">Next\nPrayer</string>
    <string name="isha_time">Isha</string>
    <string name="_1_20_nminutes">1:20\nMinutes</string>
    <string name="dummyAddress">Elsamara,TemeiElamdia,Dakhlia</string>
    <string name="dummyDate">2023/Dec/23</string>
    <string name="fagrTime">Fagr</string>
    <string name="shroukTime">Sunrise </string>
    <string name="zohrTime">Zohr</string>
    <string name="asrTime">Asr</string>
    <string name="magrbeTime">Magribe</string>
    <string name="ishaTime">Isa </string>
    <string name="qibla_direction">Qibla Direction</string>
    <string name="latlongDummy">lat:12.21212\nLong:12.554544</string>
    <string name="searchForCity">Search For City</string>
    <string name="show_on_map">Show on map!!</string>
    <string name="hijri_date">Hijri Date:</string>
    <string name="miladiDate">Gregorian:</string>
    <string name="search">Search</string>
    <string name="kaaba">Kaaba</string>
    <string name="yourLocation">Your Location</string>

</resources>