<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.bassamkhafgy.islamy.viewmodel.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blury_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftSearchGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightSearchGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topSearchCardGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topSearchGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomHomeImgGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".30" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/home_background_mosque"
            app:layout_constraintBottom_toTopOf="@id/bottomHomeImgGuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/homeHolder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightSearchGuideLine"
            app:layout_constraintStart_toStartOf="@id/leftSearchGuideLine"
            app:layout_constraintTop_toTopOf="@id/topSearchCardGuideLine">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/miladyDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/dummyDate"
                    android:textAlignment="center"
                    android:textColor="@color/g_blueDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/addressTV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/addressTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:maxLength="30"
                    android:minWidth="20dp"
                    android:singleLine="true"
                    android:text="@{viewModel.addressLiveData}"
                    android:textAlignment="center"
                    android:textColor="@color/g_icon_tint"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/miladyDate" />

                <View
                    android:id="@+id/topPrayerTimeGuideLineViewSearch"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    app:layout_constraintBottom_toTopOf="@id/fagrCardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addressTV" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/fagrCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@id/shroukCardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/topPrayerTimeGuideLineViewSearch">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/fagrTime"
                            android:textColor="@color/g_blue"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/fagr" />

                        <TextView
                            android:id="@+id/fagrTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@{viewModel.prayingTimingsFlow.fajr}"
                            android:textColor="@color/g_blueDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/shroukCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@id/zohrCardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fagrCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/shroukTime"
                            android:textColor="@color/g_blue"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/sunrie" />

                        <TextView
                            android:id="@+id/shroukTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@{viewModel.prayingTimingsFlow.sunrise}"
                            android:textColor="@color/g_blueDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/zohrCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@id/asrCardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shroukCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/zohrTime"
                            android:textColor="@color/g_blue"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/zohr" />

                        <TextView
                            android:id="@+id/zohrCardTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@{viewModel.prayingTimingsFlow.dhuhr}"
                            android:textColor="@color/g_blueDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/asrCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@id/magrebCardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/zohrCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/asrTime"
                            android:textColor="@color/g_blue"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/zohr" />

                        <TextView
                            android:id="@+id/asrCardTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@{viewModel.prayingTimingsFlow.asr}"
                            android:textColor="@color/g_blueDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/magrebCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@id/ishaCardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/asrCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/magrbeTime"
                            android:textColor="@color/g_blue"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/magreb" />

                        <TextView
                            android:id="@+id/magrebTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@{viewModel.prayingTimingsFlow.maghrib}"
                            android:textColor="@color/g_blueDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ishaCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/magrebCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/isha_time"
                            android:textColor="@color/g_blue"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/esa" />

                        <TextView
                            android:id="@+id/ishaTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center"
                            android:text="@{viewModel.prayingTimingsFlow.isha}"
                            android:textColor="@color/g_blueDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchBTN"
            style="@style/whiteButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="#00FFFFFF"
            android:elevation="0dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/AddressTypingEd"
            app:layout_constraintStart_toStartOf="@id/leftSearchGuideLine"
            app:layout_constraintTop_toBottomOf="@id/topSearchGuideLine" />

        <EditText
            android:id="@+id/AddressTypingEd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/g_line"
            android:inputType="textImeMultiLine"
            android:maxLength="30"
            android:textAlignment="center"
            android:hint="@string/searchForCity"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/searchBTN"
            app:layout_constraintEnd_toEndOf="@id/rightSearchGuideLine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/searchBTN"
            app:layout_constraintTop_toTopOf="@id/searchBTN" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>